committed from wrong directory

--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 			<div class="form-group">
 				<label for="phrase-input">Phrase</label>
 				<input id="phrase-input" class="text-center form-control" type="text" placeholder="abcba">
+				<div class="space-check-container">
+					<label for="space-check">Include whitespace?</label>
+					<input id="space-check" type="checkbox">
+				</div>
 			</div>
 			<p class="feedback">Is it a palindrome?</p>
 			<button class="btn btn-default">Check</button>
